[package]
name = "axon"
version = "0.1.0"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"
repository = "https://github.com/nervosnetwork/axon"

[dependencies]
# byzantine = { path = "./byzantine" }
core-api = { path = "./core/api" }
core-cli = { path = "./core/cli" }
core-consensus = { path = "./core/consensus" }
core-run = { path = "./core/run" }

[workspace]
members = [
    "byzantine",

    "common/apm",
    "common/apm-derive",
    "common/channel",
    "common/config-parser",
    "common/crypto",
    "common/logger",
    "common/memory-tracker",
    "common/merkle",
    "common/pubsub",
    "core/api",
    "core/cli",
    "core/consensus",
    "core/cross-client",
    "core/executor",
    "core/mempool",
    "core/metadata",
    "core/network",
    "core/rpc-client",
    "core/run",
    "core/storage",

    "core/tx-assembler",
    "devtools/genesis-generator",
    "devtools/keypair",

    "protocol",
]

[features]
default = []
jemalloc = ["core-run/jemalloc"]
pprof = ["core-api/pprof"]
random_leader = ["core-consensus/random_leader"]
# tentacle_metrics = ["core-network/tentacle_metrics"]

[profile.release]
overflow-checks = true
opt-level = 3

[profile.release-jemalloc]
inherits = "release"
debug = true
overflow-checks = true
opt-level = 3
