[package]
name = "axon"
version = "0.1.0-beta.4"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"
repository = "https://github.com/axonweb3/axon"

[dependencies]
clap = { version = "4.2", features = ["cargo"] }

# byzantine = { path = "./byzantine" }
core-api = { path = "./core/api" }
core-cli = { path = "./core/cli" }
core-consensus = { path = "./core/consensus" }
core-executor = { path = "./core/executor" }
core-run = { path = "./core/run" }
protocol = { path = "./protocol", package = "axon-protocol" }

[workspace]
members = [
    "common/apm",
    "common/apm-derive",
    "common/channel",
    "common/config-parser",
    "common/crypto",
    "common/hasher",
    "common/logger",
    "common/memory-tracker",
    "common/merkle",
    "common/pubsub",
    "core/api",
    "core/cli",
    "core/consensus",
    "core/executor",
    "core/mempool",
    "core/network",
    "core/rpc-client",
    "core/run",
    "core/storage",
    "devtools/abi-generator",
    "devtools/genesis-generator",
    "devtools/keypair",

    "protocol",
]

[features]
default = []
jemalloc = ["core-run/jemalloc"]
pprof = ["core-api/pprof"]
random_leader = ["core-consensus/random_leader"]
# tentacle_metrics = ["core-network/tentacle_metrics"]

[profile.release]
overflow-checks = true
opt-level = 3

[profile.release-jemalloc]
inherits = "release"
debug = true
overflow-checks = true
opt-level = 3

[[example]]
name = "custom_chain"
crate-type = ["bin"]
