[package]
name = "axon-protocol"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
async-trait = "0.1"
bincode = "1.3"
bytes = { version = "1.2", features = ["serde"] }
ckb-hash = "0.105"
ckb-jsonrpc-types = "0.105"
ckb-sdk = "2.3"
ckb-types = "0.105"
common-crypto = { path = "../common/crypto" }
cosmos-ibc = { package = "ibc", version = "0.19", optional = true }
creep = "0.2"
derive_more = "0.99"
ethereum = { version = "0.14", features = ["with-codec", "with-serde"] }
ethereum-types = { version = "0.14", features = ["arbitrary", "codec", "rlp", "serialize", "std"] }
evm = { version = "0.37", features = ["with-serde"] }
faster-hex = "0.6"
hasher = { version = "0.1", features = ["hash-keccak"] }
ibc-proto = { version = "0.20", optional = true }
lazy_static = "1.4"
ophelia = "0.3"
ophelia-secp256k1 = "0.3"
overlord = "0.4"
prost = "0.11"
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
tendermint-proto = { version = "0.23", optional = true }
tokio = { version = "1.21", features = ["full"] }

[dev-dependencies]
getrandom = "0.2"
hex = "0.4"
rand = "0.7"
serde_json = "1.0"
toml = "0.5"

[features]
ibc = ["dep:cosmos-ibc", "dep:ibc-proto", "dep:tendermint-proto"]
