[package]
name = "axon-protocol"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6"
async-trait = "0.1"
bincode = "1.3"
bytes = { version = "1.4", features = ["serde"] }
ckb-hash = "0.108"
ckb-jsonrpc-types = "0.108"
ckb-sdk = "2.5"
ckb-traits = "0.108"
ckb-types = "0.108"
creep = "0.2"
derive_more = "0.99"
ethereum = { version = "0.14", features = ["with-codec", "with-serde"] }
ethereum-types = { version = "0.14", features = ["arbitrary", "codec", "rlp", "serialize", "std"] }
ethers-core = "2.0"
evm = { version = "0.37", features = ["with-serde"] }
faster-hex = "0.8"
lazy_static = "1.4"
ophelia = "0.3"
ophelia-secp256k1 = "0.3"
overlord = "0.4"
rand = "0.7"
rlp = "0.5"
rlp-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
trie = { package = "cita_trie", git = "https://github.com/KaoImin/cita-trie.git", rev = "eea569c", version = "4.1" }

common-crypto = { path = "../common/crypto" }
common-hasher = { path = "../common/hasher" }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
toml = "0.7"

common-merkle = { path = "../common/merkle" }

[features]
default = ["hex-serialize"]
hex-serialize = []
