[package]
name = "common-apm-derive"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
fut-ret = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
async-trait = "0.1"
common-apm = { path = "../apm" }
jsonrpsee = { version = "0.10", features = ["macros"] }

protocol = { path = "../../protocol", package = "axon-protocol" }
