[package]
name = "common-apm"
version = "0.2.1"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../../protocol", package = "axon-protocol" }

muta-apm = "0.1.0-alpha.15"
prometheus = "0.13"
prometheus-static-metric = "0.5"
derive_more = "0.99"
lazy_static = "1.4"
