[package]
name = "common-apm"
version = "0.2.1"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
axum = "0.4"
beef = "0.5"
derive_more = "0.99"
hyper = { version = "0.14", features = ["http1", "server"] }
lazy_static = "1.4"
log = "0.4"
minstant = "0.1"
prometheus = "0.13"
prometheus-static-metric = "0.5"
trackable = "1.2"
rustracing = { git = "http://github.com/KaoImin/rustracing", branch = "main" }
rustracing_jaeger = { git = "http://github.com/KaoImin/rustracing_jaeger", branch = "main" }

common-apm-derive = { path = "../apm-derive" }
protocol = { path = "../../protocol", package = "axon-protocol" }
