[package]
name = "common-config-parser"
version = "0.2.1"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
stringreader = "0.1"
toml = "0.5"
tentacle-multiaddr = "0.3"
serde_json = "1.0"

core-consensus = { path = "../../core/consensus" }
core-mempool = { path = "../../core/mempool" }
protocol = { path = "../../protocol", package = "axon-protocol" }
