[package]
name = "common-config-parser"
version = "0.2.1"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stringreader = "0.1"
strum = "0.25"
strum_macros = "0.25"
tentacle-multiaddr = "0.3"
toml = "0.8"

common-crypto = { path = "../../common/crypto" }
protocol = { path = "../../protocol", package = "axon-protocol", default-features = false }
