[package]
name = "common-memory-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemalloc-ctl = { version = "0.4", package = "tikv-jemalloc-ctl" }
libc = "0.2"
log = "0.4"
once_cell = "1.8.0"
rocksdb = { version = "0.16", package = "ckb-rocksdb" }

common-apm = { path = "../apm" }
protocol = { path = "../../protocol", package = "axon-protocol" }
