[package]
edition = "2021"
name = "common-memory-tracker"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemalloc-ctl = { version = "0.5", package = "tikv-jemalloc-ctl" }
libc = "0.2"
log = "0.4"
once_cell = "1.13.0"
rocksdb = { version = "0.18", package = "ckb-rocksdb" }

common-apm = { path = "../apm" }
protocol = { path = "../../protocol", package = "axon-protocol" }
