[package]
name = "common-merkle"
version = "0.2.1"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hasher = "0.1"
rlp = "0.5"
static_merkle_tree = "1.1"

protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
criterion = "0.4"
rand = "0.7"

[[bench]]
harness = false
name = "bench"
