[package]
name = "core-api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-graphql = { version = "3.0", features = ["tracing"] }
beef = "0.5"

jsonrpsee = { version = "0.15", features = ["http-server", "macros", "ws-server"] }
log = "0.4"
parking_lot = "0.12"
pprof = { version = "0.11", features = ["prost-codec"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

common-apm = { path = "../../common/apm" }
common-config-parser = { path = "../../common/config-parser" }
core-consensus = { path = "../../core/consensus" }
core-executor = { path = "../../core/executor" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
fastrand = "1.9"
json = "0.12"
