[package]
name = "core-api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-graphql = { version = "3.0", features = ["tracing"] }
beef = "0.5"
ckb-jsonrpc-types = "0.108"
ckb-traits = "0.108"
ckb-types = "0.108"
jsonrpsee = { version = "0.16", features = ["macros","server"] }
log = "0.4"
parking_lot = "0.12"
pprof = { version = "0.11", features = ["prost-codec"], optional = true }
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

common-apm = { path = "../../common/apm" }
common-config-parser = { path = "../../common/config-parser" }
core-consensus = { path = "../../core/consensus" }
core-executor = { path = "../../core/executor" }
core-interoperation ={ path = "../../core/interoperation" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
json = "0.12"
