[package]
name = "core-cli"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.6"
thiserror = "1.0"

common-config-parser = { path = "../../common/config-parser" }
common-logger = { path = "../../common/logger" }
core-run = { path = "../../core/run" }
protocol = { path = "../../protocol", package = "axon-protocol" }
