[package]
name = "core-consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
cita_trie = "3.0"
json = "0.12"
creep = "0.3"
futures = { version = "0.3", features = ["async-await"] }
log = "0.4"
overlord = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
rlp = "0.5"
rlp-derive = "0.1"

common-apm = { path = "../../common/apm" }
common-crypto = { path = "../../common/crypto" }
common-logger = { path = "../../common/logger" }
common-merkle = { path = "../../common/merkle" }
core-executor = { path = "../../core/executor" }
core-mempool = { path = "../../core/mempool" }
core-storage = { path = "../../core/storage" }
core-network = { path = "../../core/network" }
protocol = { path = "../../protocol", package = "axon-protocol"}

[dev-dependencies]
bit-vec = "0.6"
num-traits = "0.2"
rand = "0.7"

[features]
default = []
random_leader = ["overlord/random_leader"]
