[package]
name = "core-consensus"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
cita_trie = "3.0"
creep = "0.2"
futures = { version = "0.3", features = ["async-await"] }
json = "0.12"
lazy_static = "1.4"
log = "0.4"
overlord = "0.4"
parking_lot = "0.12"
rlp = "0.5"
rlp-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

common-apm = { path = "../../common/apm" }
common-apm-derive = { path = "../../common/apm-derive" }
common-crypto = { path = "../../common/crypto" }
common-logger = { path = "../../common/logger" }
common-merkle = { path = "../../common/merkle" }
core-executor = { path = "../../core/executor" }
core-mempool = { path = "../../core/mempool" }
core-metadata = { path = "../../core/metadata" }
core-network = { path = "../../core/network" }
core-storage = { path = "../../core/storage" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
bit-vec = "0.6"
num-traits = "0.2"
rand = "0.7"

[features]
default = []
random_leader = ["overlord/random_leader"]
