[package]
name = "core-cross-client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6"
ckb-jsonrpc-types = "0.106"
ckb-sdk = "2.4"
ckb-types = "0.108"
ethabi = "17.2"
ethabi-contract = { git = "https://github.com/rust-ethereum/ethabi.git", rev = "7edf185" }
ethabi-derive = { git = "https://github.com/rust-ethereum/ethabi.git", rev = "7edf185" }
ethers-contract = "1.0"
ethers-core = "1.0"
ethers-providers = "1.0"
futures = "0.3"
jsonrpc-core = "18.0"
lazy_static = "1.4"
log = "0.4"
molecule = "0.7"
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
tokio-util = { version = "0.7", features = ["codec"] }

common-config-parser = { path = "../../common/config-parser" }
common-crypto = { path = "../../common/crypto" }
core-executor = { path = "../../core/executor" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
rand = "0.7"
