[package]
name = "core-db"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
rocksdb = { package = "ckb-rocksdb", version = "0.20" }

common-apm = { path = "../../common/apm" }
common-apm-derive = { path = "../../common/apm-derive" }
common-config-parser = { path = "../../common/config-parser" }
protocol = { path = "../../protocol", package = "axon-protocol" }

