[package]
edition = "2021"
name = "core-executor"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6"
az = "1.2"
bn = { package = "substrate-bn", version = "0.6" }
ckb-always-success-script = "0.0.1"
ckb-traits = "0.106"
ckb-types = "0.106"
common-apm = { path = "../../common/apm" }
common-config-parser = { path = "../../common/config-parser" }
common-crypto = { path = "../../common/crypto" }
common-merkle = { path = "../../common/merkle" }
core-interoperation = { path = "../interoperation" }
ethers = "2.0"
evm = { version = "0.37", features = ["tracing"] }
futures = "0.3"
hasher = "0.1"
lazy_static = "1.4"
log = "0.4"
lru = "0.10"
molecule = "0.7"
once_cell = "1.17"
parking_lot = "0.12"
protocol = { path = "../../protocol", package = "axon-protocol" }
rand = { version = "0.8", features = ["small_rng"] }
ripemd = "0.1"
rlp = "0.5"
rlp-derive = "0.1"
rocksdb = { version = "0.19", package = "ckb-rocksdb" }
rug = "1.19"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
bytemuck = "1.13"
ckb-jsonrpc-types = "0.106"
ckb-types = "0.106"
common-crypto = { path = "../../common/crypto" }
core-rpc-client = { path = "../rpc-client" }
core-storage = { path = "../storage" }
criterion = "0.4"
ethabi = "18.0"
ethabi-contract = { git = "https://github.com/rust-ethereum/ethabi.git", rev = "7edf185" }
ethabi-derive = { git = "https://github.com/rust-ethereum/ethabi.git", rev = "7edf185" }
getrandom = "0.2"
hashbrown = "0.13"
rand7 = { package = "rand", version = "0.7" }
revm = "2.3"
rlp = "0.5"
serde_json = "1.0"
tempfile = "3.3"

[[bench]]
harness = false
name = "bench_convert_u256"

[[bench]]
harness = false
name = "bench_transfer"

[[bench]]
harness = false
name = "bench_vm"
