[package]
name = "core-ibc"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flex-error = { version = "0.4.2", features = ["eyre_tracer"] }
ibc = "0.19"
ibc-proto = { version = "0.20", features = ["server"] }
log = "0.4"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tendermint-proto = "0.23"
tonic = { version = "0.8", features = ["tls", "tls-roots"] }

[dependencies.protocol]
path = "../../protocol"
package = "axon-protocol"
features = ["ibc"]
