[package]
name = "core-ibc"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc = "0.19"
ibc-proto = { version = "0.20", features = ["server"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
tendermint = "0.23"
tendermint-rpc = "0.23"
tonic = { version = "0.8", features = ["tls", "tls-roots"] }
warp = "0.3"

[dependencies.core-storage]
path = "../storage"
features = ["ibc"]

[dependencies.protocol]
path = "../../protocol"
package = "axon-protocol"
features = ["ibc"]
