[package]
name = "core-ibc"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc = "0.23"
ibc-proto = { version = "0.20", features = ["server"] }
log = "0.4"
tonic = { version = "0.8", features = ["tls", "tls-roots"] }

[dependencies.core-storage]
path = "../storage"
features = ["ibc"]

[dependencies.protocol]
path = "../../protocol"
package = "axon-protocol"
features = ["ibc"]
