[package]
name = "core-interoperation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
ckb-error = "0.106"
ckb-script = "0.106"
ckb-traits = "0.106"
ckb-types = "0.106"
ckb-vm = { version = "0.22", features = ["asm"] }
lazy_static = "1.4"
log = "0.4"

protocol = { path = "../../protocol", package = "axon-protocol" }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
ckb-vm-aot = "0.22"

[dev-dependencies]
cardano-serialization-lib = "7.0"
cardano-message-signing = { git = "https://github.com/ashuralyk/message-signing", branch = "rust" }
ckb-jsonrpc-types = "0.106"
ed25519-dalek = "1.0"
ethers-core = "1.0"
rand = "0.7"
serde_json = "1.0"

core-rpc-client = { path = "../../core/rpc-client" }
core-executor = { path = "../../core/executor" }
core-storage = { path = "../../core/storage" }
