[package]
name = "core-interoperation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
ckb-chain-spec = "0.111"
ckb-error = "0.111"
ckb-script = "0.111"
ckb-traits = "0.111"
ckb-types = "0.111"
ckb-vm = { version = "=0.24.6", features = ["asm"] }
lazy_static = "1.4"
log = "0.4"

protocol = { path = "../../protocol", package = "axon-protocol", default-features = false }

[dev-dependencies]
cardano-serialization-lib = "7.0"
cardano-message-signing = { git = "https://github.com/ashuralyk/message-signing", branch = "rust" }
ckb-jsonrpc-types = "0.111"
ed25519-dalek = "1.0"
ethers-core = "2.0"
serde_json = "1.0"

core-rpc-client = { path = "../../core/rpc-client" }
core-executor = { path = "../../core/executor" }
core-storage = { path = "../../core/storage" }
core-db = { path = "../../core/db" }
