[package]
name = "core-mempool"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.106"
crossbeam-queue = "0.3"
dashmap = { version = "5.4", features = ["rayon"] }
futures = { version = "0.3", features = [ "async-await" ] }
log = "0.4"
parking_lot = "0.12"
rlp = "0.5"
rlp-derive = "0.1"

common-apm = { path = "../../common/apm" }
common-apm-derive = { path = "../../common/apm-derive" }
common-config-parser = { path = "../../common/config-parser" }
common-crypto = { path = "../../common/crypto" }
core-executor = { path = "../../core/executor" }
core-interoperation = { path = "../../core/interoperation" }
core-network = { path = "../../core/network" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
parking_lot = "0.12"
rand = "0.7"

[[bench]]
harness = false
name = "bench"
