[package]
name = "core-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
cita_trie = "3.0"
ethers = { version = "0.6", features = ["abigen"] }
lazy_static = "1.4"
parking_lot = "0.12"
serde_json = "1.0"

protocol = { path = "../../protocol", package = "axon-protocol" }
core-executor = { path = "../../core/executor" }

[dev-dependencies]
rand = "0.7"
core-storage = { path = "../../core/storage" }
