[package]
name = "core-metadata"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5"
cita_trie = "3.0"
common-apm = { path = "../../common/apm" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs.git", features = ["abigen"], rev = "a43a9b8" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs.git", rev = "a43a9b8" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs.git", rev = "a43a9b8" }
lazy_static = "1.4"
parking_lot = "0.12"
serde_json = "1.0"

core-executor = { path = "../../core/executor" }
protocol = { path = "../../protocol", package = "axon-protocol" }

[dev-dependencies]
core-storage = { path = "../../core/storage" }
rand = "0.7"
